--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,9 +1,18 @@
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>To-Do list</title>
+<meta charset="UTF-8">
+<title>To-Do list</title>
 </head>
 <body>
-    
+	<h1>Your To-Do</h1>
+	<form method='POST'>
+		<input type="text" name="item_text" id="id_new_item"
+			placeholder="Enter a to-do item" /> {% csrf_token %}
+	</form>
+	<table id="id_list_table">
+		<tr>
+			<td>{{ new_item_text }}</td>
+		</tr>
+	</table>
 </body>
 </html>
