--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -10,9 +10,11 @@
 			placeholder="Enter a to-do item" /> {% csrf_token %}
 	</form>
 	<table id="id_list_table">
+	    {% for item in items %}
 		<tr>
-			<td>{{ new_item_text }}</td>
+			<td>{{ forloop.counter }}: {{ item.text }}</td>
 		</tr>
+		{% endfor %}
 	</table>
 </body>
 </html>
