--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,20 +1,18 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>To-Do list</title>
+    <meta charset="UTF-8">
+    <title>To-Do list</title>
 </head>
 <body>
-	<h1>Your To-Do</h1>
-	<form method='POST'>
-		<input type="text" name="item_text" id="id_new_item"
-			placeholder="Enter a to-do item" /> {% csrf_token %}
-	</form>
-	<table id="id_list_table">
-	    {% for item in items %}
-		<tr>
-			<td>{{ forloop.counter }}: {{ item.text }}</td>
-		</tr>
-		{% endfor %}
-	</table>
+    <h1>Start a new To-Do list</h1>
+    <form action="/lists/new" method='POST'></form>
+    <input type="text" name='item_text' id="id_new_item" placeholder="Enter a to-do item">
+    {% csrf_token %}
+    <table>
+        {% for item in items %}
+            <tr><td>{{ item.text }}</td></tr>
+        {% endfor %}
+    </table>
 </body>
 </html>
