--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -1,13 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>list</title>
+<meta charset="UTF-8">
+<title>list</title>
 </head>
 <body>
-    <h1>Start a new To-Do list</h1>
-    <form action="/lists/new" method='POST'></form>
-    <input type="text" name='item_text' id="id_new_item" placeholder="Enter a to-do list item">
-    {% csrf_token %}
+	<h1>Start a new To-Do list</h1>
+	<form action="/lists/{{ list.id }}/add_item" method='POST'></form>
+	<input type="text" name='item_text' id="id_new_item"
+		placeholder="Enter a to-do list item"> {% csrf_token %}
+	<table>
+		{% for item in list.item_set.all %}
+		<tr>
+			<td>{{ forloop.counter }}: {{ item.text }}</td>
+		</tr>
+		{% endfor %}
+	</table>
 </body>
 </html>
